--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,4 +1,11 @@
+/* Reset to zero */
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
 
+/* Styled logo image in nav-bar */
 .navbar img {
     height: 2rem; /* Limit size of logo image */
     float: left; /* Float left of text */
@@ -7,4 +14,14 @@
 
 .navbar h4 {
     float: right; /* Float right of logo */
+}
+
+.navbar .container-fluid  {
+    background-color: gold; /* To make a vibrant header and nav-bar */
+}
+
+#hero-image {
+    height: 600px;
+    width: 100%;
+    background: url(../Images/jrrtolkien.jpg) no-repeat center center;
 }
