--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -16,7 +16,7 @@
     float: right; /* Float right of logo */
 }
 
-.navbar .container-fluid  {
+.navbar-custom {
     background-color: gold; /* To make a vibrant header and nav-bar */
 }
 
@@ -40,7 +40,7 @@ content h4 {
     height: 500px;
     width: 100%;
     background: url(../Images/jrrtolkien.jpg) no-repeat center center;
-    background-size: 100vw auto; /* Fill width of screen */
+    background-size: 100vw auto; /* Fill width of screen 
 }
 
 /* Quote */
